test.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: testvs
  namespace: default
spec:
  hosts:
  - test.knative.acc.transpose-it.nl
  gateways:
  - knative-ingress-gateway.knative-serving.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /bla
    rewrite:
      authority: test4.default.knative.acc.transpose-it.nl
    route:
    - destination:
        host: istio-ingressgateway.istio-system.svc.cluster.local
        port:
          number: 80
  - match:
    - uri:
        prefix: /
    rewrite:
      authority: test1.default.knative.acc.transpose-it.nl
    route:
    - destination:
        host: istio-ingressgateway.istio-system.svc.cluster.local
        port:
          number: 80

---
apiVersion: serving.knative.dev/v1 # Current version of Knative
kind: Service
metadata:
  name: test1 # The name of the app
  namespace: default # The namespace the app will use
spec:
  template:
    spec:
      containers:
        - image: gcr.io/knative-samples/helloworld-go # The URL to the image of the app
          env:
            - name: TARGET # The environment variable printed out by the sample app
              value: "test1"

---
apiVersion: serving.knative.dev/v1 # Current version of Knative
kind: Service
metadata:
  name: test4 # The name of the app
  namespace: default # The namespace the app will use
spec:
  template:
    spec:
      containers:
        - image: gcr.io/knative-samples/helloworld-go # The URL to the image of the app
          env:
            - name: TARGET # The environment variable printed out by the sample app
              value: "test4"
